--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap" rel="stylesheet">
-  <!--End Comm100 Live Chat Code-->
 </head>
-<body class="">
+<body>
   <app-root></app-root>
   <!--Begin Comm100 Live Chat Code-->
-  <div id="comm100-button-deb0dfda-a788-4815-9dd8-edbb37ece352"></div>
+  <div id="comm100-button-8e1fbb97-ea50-4601-8220-d777d3f580cf"></div>
   <script type="text/javascript">
-  var Comm100API=Comm100API||{};(function(t){function e(e){var a=document.createElement("script"),c=document.getElementsByTagName("script")[0];a.type="text/javascript",a.async=!0,a.src=e+t.site_id,c.parentNode.insertBefore(a,c)}t.chat_buttons=t.chat_buttons||[],t.chat_buttons.push({code_plan:"deb0dfda-a788-4815-9dd8-edbb37ece352",div_id:"comm100-button-deb0dfda-a788-4815-9dd8-edbb37ece352"}),t.site_id=10100527,t.main_code_plan="deb0dfda-a788-4815-9dd8-edbb37ece352",e("https://vue.comm100.com/livechat.ashx?siteId="),setTimeout(function(){t.loaded||e("https://standby.comm100vue.com/livechat.ashx?siteId=")},5e3)})(Comm100API||{})
-</script>
+    var Comm100API=Comm100API||{};(function(t){function e(e){var a=document.createElement("script"),c=document.getElementsByTagName("script")[0];a.type="text/javascript",a.async=!0,a.src=e+t.site_id,c.parentNode.insertBefore(a,c)}t.chat_buttons=t.chat_buttons||[],t.chat_buttons.push({code_plan:"8e1fbb97-ea50-4601-8220-d777d3f580cf",div_id:"comm100-button-8e1fbb97-ea50-4601-8220-d777d3f580cf"}),t.site_id=70000389,t.main_code_plan="8e1fbb97-ea50-4601-8220-d777d3f580cf",e("https://vue.comm100.com/livechat.ashx?siteId="),setTimeout(function(){t.loaded||e("https://standby.comm100vue.com/livechat.ashx?siteId=")},5e3)})(Comm100API||{})
+  </script>
   <!--End Comm100 Live Chat Code-->
+</body>
 </html>
